--- a/src/service/manage/CMakeLists.txt
+++ b/src/service/manage/CMakeLists.txt
@@ -24,9 +24,6 @@ add_definitions(-DEMAIL="hehehunanchina@live.com")
 add_definitions(-DUSE_DEEP_DATA=true) # Use Deep Market Data
 
 set(COMMON_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../common)
-set(DEPS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../deps)
-set(ENV{PKG_CONFIG_PATH} "${DEPS_DIR}/lib/pkgconfig")
-set(CMAKE_PREFIX_PATH "${DEPS_DIR}/lib/cmake")
 
 if (NOT MANAGE_SHARED_NAME)
     set(MANAGE_SHARED_NAME ${PROJECT_NAME})
@@ -36,43 +33,59 @@ if (NOT MANAGE_STATIC_NAME)
     set(MANAGE_STATIC_NAME ${PROJECT_NAME}-static)
 endif()
 
-find_package(Boost COMPONENTS 
+find_package(Boost REQUIRED COMPONENTS
     filesystem
     coroutine
     program_options)
 
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(BREAKPAD REQUIRED breakpad-client)
-
+find_package(unofficial-breakpad REQUIRED)
 find_package(spdlog REQUIRED)
 find_package(fmt REQUIRED)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${COMMON_SOURCE_DIR})
-include_directories(${DEPS_DIR}/include)
-include_directories(${BREAKPAD_INCLUDE_DIRS})
-include_directories(${DEPS_DIR}/include/fmt)
 
 link_directories(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 link_directories(${DEPS_DIR}/lib)
 
-aux_source_directory(./ SRC)
 aux_source_directory(${COMMON_SOURCE_DIR} COMM_SRC)
 
 if (BUILD_SHARED)
-    add_library(${MANAGE_SHARED_NAME} SHARED ${SRC} ${COMM_SRC})
+    add_library(${MANAGE_SHARED_NAME} SHARED ${COMM_SRC}
+        application.h
+        application.cpp
+        config.h
+        config.cpp
+        error.h
+        export.cpp
+        proc_mgr.h
+        proc_mgr.cpp
+    )
 
     target_link_libraries(${MANAGE_SHARED_NAME} 
         ${CMAKE_DL_LIBS}
         ${Boost_LIBRARIES}
         pthread
-        breakpad_client
         spdlog::spdlog
-        fmt::fmt)
+        fmt::fmt
+
+        #    breakpad_client
+        unofficial::breakpad::libbreakpad # for unofficial breakpad cmake config
+        unofficial::breakpad::libbreakpad_client # for unofficial breakpad-client cmake config
+    )
 endif()
 
 if (BUILD_STATIC)
-    add_library(${MANAGE_STATIC_NAME} STATIC ${SRC} ${COMM_SRC})
+    add_library(${MANAGE_STATIC_NAME} STATIC ${COMM_SRC}
+        application.h
+        application.cpp
+        config.h
+        config.cpp
+        error.h
+        export.cpp
+        proc_mgr.h
+        proc_mgr.cpp
+    )
 
     target_link_libraries(${MANAGE_STATIC_NAME} 
         ${CMAKE_DL_LIBS}
@@ -80,7 +93,12 @@ if (BUILD_STATIC)
         breakpad_client
         spdlog::spdlog
         pthread
-        fmt::fmt)
+        fmt::fmt
+
+        #    breakpad_client
+        unofficial::breakpad::libbreakpad # for unofficial breakpad cmake config
+        unofficial::breakpad::libbreakpad_client # for unofficial breakpad-client cmake config
+    )
 endif()
 
 message("service ${PROJECT_NAME} build success")
