--- a/src/service/quote/CMakeLists.txt
+++ b/src/service/quote/CMakeLists.txt
@@ -24,9 +24,6 @@ add_definitions(-DEMAIL="hehehunanchina@live.com")
 add_definitions(-DUSE_DEEP_DATA=true) # Use Deep Market Data
 
 set(COMMON_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../common)
-# set(DEPS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../deps)
-# set(ENV{PKG_CONFIG_PATH} "${DEPS_DIR}/lib/pkgconfig")
-# set(CMAKE_PREFIX_PATH "${DEPS_DIR}/lib/cmake")
 
 if (NOT QUOTE_SHARED_NAME)
     set(QUOTE_SHARED_NAME ${PROJECT_NAME})
@@ -36,29 +33,23 @@ if (NOT QUOTE_STATIC_NAME)
     set(QUOTE_STATIC_NAME ${PROJECT_NAME}-static)
 endif()
 
-find_package(Boost COMPONENTS 
+find_package(Boost REQUIRED COMPONENTS
     filesystem
     coroutine
     program_options)
-
-# find_package(PkgConfig REQUIRED)
-# pkg_check_modules(BREAKPAD REQUIRED breakpad-client)
 
 find_package(spdlog REQUIRED)
 find_package(fmt REQUIRED)
 find_package(httplib REQUIRED)
 find_package(libcpp REQUIRED)
-#find_package(BREAKPAD REQUIRED)
+find_package(unofficial-breakpad REQUIRED)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${COMMON_SOURCE_DIR})
-#include_directories(${DEPS_DIR}/include)
-#include_directories(${BREAKPAD_INCLUDE_DIRS})
 
 link_directories(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 link_directories(${DEPS_DIR}/lib)
 
-aux_source_directory(./ SRC)
 aux_source_directory(${COMMON_SOURCE_DIR} COMM_SRC)
 
 # find_library(CTP_MDAPI soptthostmduserapi_se PATH ${DEPS_DIR}/lib)
@@ -67,7 +58,20 @@ aux_source_directory(${COMMON_SOURCE_DIR} COMM_SRC)
 find_library(XTP_QUOTE xtpquoteapi PATH ${DEPS_DIR}/lib)
 
 if (BUILD_SHARED)
-    add_library(${QUOTE_SHARED_NAME} SHARED ${SRC} ${COMM_SRC})
+    add_library(${QUOTE_SHARED_NAME} SHARED ${COMM_SRC}
+        application.h
+        application.cpp
+        config.h
+        config.cpp
+        # ctp.h
+        # ctp.cpp
+        error.h
+        export.cpp
+        tx.h
+        tx.cpp
+        xtp.h
+        xtp.cpp
+    )
 
     target_link_libraries(${QUOTE_SHARED_NAME} 
         ${CMAKE_DL_LIBS}
@@ -80,11 +84,28 @@ if (BUILD_SHARED)
         fmt::fmt
         rt
         pthread
-        libcpp)
+
+        #    breakpad_client
+        unofficial::breakpad::libbreakpad # for unofficial breakpad cmake config
+        unofficial::breakpad::libbreakpad_client # for unofficial breakpad-client cmake config
+    )
 endif()
 
 if (BUILD_STATIC)
-    add_library(${QUOTE_STATIC_NAME} STATIC ${SRC} ${COMM_SRC})
+    add_library(${QUOTE_STATIC_NAME} STATIC ${COMM_SRC}
+        application.h
+        application.cpp
+        config.h
+        config.cpp
+        # ctp.h
+        # ctp.cpp
+        error.h
+        export.cpp
+        tx.h
+        tx.cpp
+        xtp.h
+        xtp.cpp
+    )
 
     target_link_libraries(${QUOTE_STATIC_NAME} 
         ${CMAKE_DL_LIBS}
@@ -97,7 +118,11 @@ if (BUILD_STATIC)
         fmt::fmt
         rt
         pthread
-        libcpp)
+    
+        #    breakpad_client
+        unofficial::breakpad::libbreakpad # for unofficial breakpad cmake config
+        unofficial::breakpad::libbreakpad_client # for unofficial breakpad-client cmake config
+    )
 endif()
 
 message("service ${PROJECT_NAME} build success")
